@@ -1,114 +1,3 @@
-<!--<?xml version="1.0" encoding="UTF-8"?>-->
-<!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
-<!--xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-<!--xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
-<!--<modelVersion>4.0.0</modelVersion>-->
-
-<!--<groupId>WEB-QA</groupId>-->
-<!--<artifactId>WEB-QA</artifactId>-->
-<!--<version>1.0-SNAPSHOT</version>-->
-
-<!--&lt;!&ndash;Default properties&ndash;&gt;-->
-<!--<properties>-->
-<!--<browser>firefox</browser>-->
-<!--</properties>-->
-
-<!--<profiles>-->
-<!--<profile>-->
-<!--<id>Chrome</id>-->
-<!--<properties>-->
-<!--<browser>chrome</browser>-->
-<!--<testNGPath>${basedir}/src/main/resources/testng/jenkins.xml</testNGPath>-->
-<!--<platform.env>pc</platform.env>-->
-<!--</properties>-->
-<!--</profile>-->
-<!--</profiles>-->
-
-<!--&lt;!&ndash;Plugin set custom properties&ndash;&gt;-->
-<!--<build>-->
-<!--<plugins>-->
-            <!--<plugin>-->
-<!--<groupId>org.apache.maven.plugins</groupId>-->
-<!--<artifactId>maven-surefire-plugin</artifactId>-->
-<!--<version>2.16</version>-->
-<!--<configuration>-->
-<!--<systemPropertyVariables>-->
-<!--<browser>${browser}</browser>-->
-<!--<platform.env>${platform.env}</platform.env>-->
-<!--<buildDirectory>${project.build.directory}</buildDirectory>-->
-<!--</systemPropertyVariables>-->
-<!--</configuration>-->
-            <!--</plugin>-->
-
-
-<!--&lt;!&ndash;Plugin for create XML&ndash;&gt;-->
-<!--<plugin>-->
-<!--<groupId>org.apache.maven.plugins</groupId>-->
-<!--<artifactId>maven-failsafe-plugin</artifactId>-->
-<!--<version>2.10</version>-->
-<!--<configuration>-->
-<!--<argLine>-XX:PermSize=256m -XX:MaxPermSize=1024m</argLine>-->
-<!--<skip>false</skip>-->
-<!--<suiteXmlFiles>-->
-<!--<suiteXmlFile>${testNGPath}</suiteXmlFile>-->
-<!--</suiteXmlFiles>-->
-<!--</configuration>-->
-<!--<executions>-->
-<!--<execution>-->
-<!--<id>integration-test</id>-->
-<!--<goals>-->
-<!--<goal>integration-test</goal>-->
-<!--</goals>-->
-<!--</execution>-->
-<!--<execution>-->
-<!--<id>verify</id>-->
-<!--<goals>-->
-<!--<goal>verify</goal>-->
-<!--</goals>-->
-<!--</execution>-->
-<!--</executions>-->
-<!--</plugin>-->
-<!--</plugins>-->
-<!--</build>-->
-
-<!--<dependencies>-->
-<!--<dependency>-->
-<!--<groupId>org.testng</groupId>-->
-<!--<artifactId>testng</artifactId>-->
-<!--<version>6.14.2</version>-->
-<!--<scope>test</scope>-->
-<!--</dependency>-->
-
-<!--<dependency>-->
-<!--<groupId>com.codeborne</groupId>-->
-<!--<artifactId>selenide</artifactId>-->
-<!--<version>4.11.2</version>-->
-<!--<scope>test</scope>-->
-<!--</dependency>-->
-
-<!--<dependency>-->
-<!--<groupId>io.appium</groupId>-->
-<!--<artifactId>java-client</artifactId>-->
-<!--<version>4.1.2</version>-->
-<!--</dependency>-->
-
-<!--&lt;!&ndash;Need for create XML listener&ndash;&gt;-->
-<!--<dependency>-->
-<!--<groupId>org.reflections</groupId>-->
-<!--<artifactId>reflections</artifactId>-->
-<!--<version>0.9.11</version>-->
-<!--<exclusions>-->
-<!--<exclusion>-->
-<!--<artifactId>guava</artifactId>-->
-<!--<groupId>com.google.guava</groupId>-->
-<!--</exclusion>-->
-<!--</exclusions>-->
-<!--</dependency>-->
-
-<!--</dependencies>-->
-<!--</project>-->
-
-
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -664,3 +553,4 @@
     </repositories>
 
 </project>
+
